--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +11,50 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700;900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Shippori+Antique&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
-    <header>
-    <div class="welcome">
-        <h1>This will be a full-stack web app for educational content.</h1>
-        <br>
-        <h2>Stay tuned!</h2>
+    <div class="background-layer">
+        <div class="header">
+            <h1>VentureLearning</h1>
+            <img src="img/logocolorshadow.png" alt="logo">
+        </div>
+        <div class="searchbar">
+            <i class="fa fa-search"></i>
+            <input type="text" placeholder="Search...">
+        </div>
+        <div class="content">
+            <div class="content-box1">
+            </div>
+            <div class="content-box2">
+            </div>
+            <div class="content-box3">
+            </div>
+        </div>
+        <div class="left-menu">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="right-menu">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </div>
-    </header>
 </body>
+
 </html>
