added the mobile header

--- a/index.html
+++ b/index.html
@@ -21,38 +21,23 @@
 <body>
     <div class="background-layer">
         <div class="header">
+            <div class="ham-menu">
+                <div class="bar-1"></div>
+                <div class="bar-2"></div>
+                <div class="bar-3"></div>
+            </div>
+            <div class="searchbar">
+                <input type="text" placeholder="Search...">
+            </div>
             <h1>VentureLearning</h1>
             <img src="img/logocolorshadow.png" alt="logo">
         </div>
-        <div class="searchbar">
-            <i class="fa fa-search"></i>
-            <input type="text" placeholder="Search...">
+        <div class="welcome-text">
+            <h1>Welcome back, <span style="color: var(--primary-color)">Markus.</span></h1>
         </div>
         <div class="content">
             <div class="content-box1">
             </div>
-            <div class="content-box2">
-            </div>
-            <div class="content-box3">
-            </div>
-        </div>
-        <div class="left-menu">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
-        <div class="right-menu">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
         </div>
     </div>
 </body>
