--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
     <div class="background-layer">
         <div class="header">
-            <div class="ham-menu">
+            <a><div class="ham-menu">
                 <div class="bar-1"></div>
                 <div class="bar-2"></div>
                 <div class="bar-3"></div>
-            </div>
+            </div></a>
             <div class="searchbar">
                 <input type="text" placeholder="Search...">
             </div>
@@ -34,6 +34,9 @@
         </div>
         <div class="welcome-text">
             <h1>Welcome back, <span style="color: var(--primary-color)">Markus.</span></h1>
+        </div>
+        <div class="section-text">
+            <h1>Latest activities</h1>
         </div>
         <div class="content">
             <div class="content-box1">
