--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         </div>
         <div class="content">
             <div class="content-box1">
+                <h1><span style="color: var(--primary-color);">There is not going on a lot right now...</span></h1>
+                <br>
+                <p>That will soon change though.</p>
+            </div>
+            <div class="content-box2">
+            </div>
+            <div class="content-box3">
+            </div>
+            <div class="content-box4">
             </div>
         </div>
     </div>
