added maintenance page

--- a/index.html
+++ b/index.html
@@ -21,36 +21,12 @@
 <body>
     <div class="background-layer">
         <div class="header">
-            <a><div class="ham-menu">
-                <div class="bar-1"></div>
-                <div class="bar-2"></div>
-                <div class="bar-3"></div>
-            </div></a>
-            <div class="searchbar">
-                <input type="text" placeholder="Search...">
-            </div>
-            <h1>VentureLearning</h1>
             <img src="img/logocolorshadow.png" alt="logo">
+            <h1>Woah slow down, Turbo!</h1>
+            <br>
+            <h2>This site is not done yet. Maybe come back next week!</h2>
         </div>
-        <div class="welcome-text">
-            <h1>Welcome back, <span style="color: var(--primary-color)">Markus.</span></h1>
-        </div>
-        <div class="section-text">
-            <h1>Latest activities</h1>
-        </div>
-        <div class="content">
-            <div class="content-box1">
-                <h1><span style="color: var(--primary-color);">There is not going on a lot right now...</span></h1>
-                <br>
-                <p>That will soon change though.</p>
-            </div>
-            <div class="content-box2">
-            </div>
-            <div class="content-box3">
-            </div>
-            <div class="content-box4">
-            </div>
-        </div>
+
     </div>
 </body>
 
