--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 <body>
     <div class="background-layer">
         <div class="header">
-            <img src="img/logocolorshadow.png" alt="logo">
-            <h1>Woah slow down, Turbo!</h1>
-            <br>
-            <h2>This site is not done yet. Maybe come back next week!</h2>
+            <div class="text">
+                <h1>Woah slow down, Turbo!</h1>
+                <br>
+                <h2>This site is not done yet. Maybe come back next week!</h2>
+            </div>
         </div>
-
     </div>
+    <img src="img/logocolorshadow.png" alt="logo">
 </body>
 
 </html>
