--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700;900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Shippori+Antique&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 
 
 <body>
     <div class="background-layer">
         <div class="header">
-            <a><div class="ham-menu">
+            <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()"><div class="ham-menu">
                 <div class="bar-1"></div>
                 <div class="bar-2"></div>
                 <div class="bar-3"></div>
             </div></a>
+            <div id="myLinks">
+                <a href="#page1">Page 1</a>
+                <a href="#page2">Page 2</a>
+                <a href="#page3">Page 3</a>
+            </div>
             <div class="searchbar">
                 <input type="text" placeholder="Search...">
             </div>
