new color scheme and added title logo

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <body>
     <div class="background-layer">
         <div class="header">
-            <img src="img/logocolorshadow.png" alt="logo">
-            <h1>Woah slow down, Turbo!</h1>
+            <img src="img/venturelearning.svg" alt="Venture Learning" class="name">
+            <img src="img/logowhite.png" alt="logo" class="icon">
+            <h1>Not so fast my friend!</h1>
             <br>
             <h2>This site is not done yet. Maybe come back next week!</h2>
         </div>
