changed h1 color and lineheight

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <div class="header">
             <img src="img/venturelearning.svg" alt="Venture Learning" class="name">
             <img src="img/logowhite.png" alt="logo" class="icon">
-            <h1>Not so fast my friend!</h1>
-            <br>
-            <h2>This site is not done yet. Maybe come back next week!</h2>
+            <h1>Sorry, this might take a while...</h1>
         </div>
     </div>
 </body>
